creacion de dos paginas full responsive

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -33,7 +33,7 @@
         <section class="contactosContainer">
             <article class="contactos">
                 <h1>CONTÁCTANOS</h1>
-                <h3>Lo invitamos a dejarnos sus datos y nos contactaremos con ustes a la brevedad</h3>
+                <h3>Lo invitamos a dejarnos sus datos y nos contactaremos con usted a la brevedad</h3>
                 <form action="">
                     <fieldset>
                         <label for="">Nombre</label>
