modificación de index con un poco de bootstrap

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moyano Propiedades</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -15,7 +16,7 @@
         </div>
 
         <nav>
-            <ul>
+            <ul class="list-unstyled">
                 <li> <a href="../index.html"> INICIO </a>  </li>
                 <li> <a href="./inmuebles.html"> INMUEBLES </a>  </li>
                 <li> <a href="./emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
@@ -30,9 +31,9 @@
     </header>
 
     <main>
-        <section class="contactosContainer">
+        <section class="contactosContainer border-bottom">
             <article class="contactos">
-                <h1>CONTÁCTANOS</h1>
+                <h1 class="fw-bold">CONTÁCTANOS</h1>
                 <h3>Lo invitamos a dejarnos sus datos y nos contactaremos con usted a la brevedad</h3>
                 <form action="">
                     <fieldset>
@@ -61,7 +62,6 @@
 
     </main>
 
-    <hr>
     <footer>
         <section>
             <h1>Sucursal Zona Centro</h1>
@@ -92,6 +92,7 @@
 
 
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
