--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="text-warning d-flex justify-content-center pt-5"> Propiedades en Venta Destacadas</h1>
             <div class="container-fluid row p-5">
                 <article class=" container col-xl-12 col-xxl-6 d-flex justify-content-center">
-                <img src="./assets/img/casa-main2.jpg" alt="">
+                <img src="./assets/img/casa-main2.jpg" class="img-fluid" alt="Responsive image">
                 </article>
                 <article class="container col-xl-12 col-xxl-6 d-flex flex-column justify-content-center border-top border-bottom border-warning w-90">
                     <h2 class="text-warning text-center">Altos de Manantiales</h2>
@@ -84,7 +84,7 @@
 
             <div class="container-fluid row p-5" >
                 <article class=" container col-xxl-6 d-flex justify-content-center">
-                <img src="./assets/img/casa-main4.jpg" alt="">
+                <img src="./assets/img/casa-main4.jpg" class="img-fluid" alt="Responsive image">
                 </article>
                 <article class="container col-xxl-6 d-flex flex-column justify-content-center border-top border-bottom border-warning">  
                     <h2 class="text-warning text-center">Country del Jockey</h2>
