Aplicacion de SEO, animaciones, pseudoclases, mixins, variables, maps y creación de partials

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moyano Propiedades</title>
+    <title>Moyano Propiedades | Nosotros</title>
+    <meta name="keywords" content="inmobiliaria, casa, córdoba">
+    <meta name="description" content="Todo acerca de nosotros...">
+    <meta name="author" content="Manuel Moyano">
+    <meta name="copyright" content=" Moyano Propiedades">
+    <link rel="shortcut icon" href="../assets/img/casa-icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -46,8 +51,8 @@
                 </div>
             </article>
             <article class="nos nos2">
-                <img src="../assets/img/oficinas.jpg" alt="">
-                <img src="../assets/img/reunion.jpg" alt="">
+                <img src="../assets/img/oficinas.jpg" alt="Oficinas de moyano propiedades">
+                <img src="../assets/img/reunion.jpg" alt="Empleados en la sala de reuniones">
             </article>
         </section>
         <section class="mision">
@@ -64,29 +69,29 @@
     <hr>
     <footer>
         <section>
-            <h1>Sucursal Zona Centro</h1>
+            <h3>Sucursal Zona Centro</h3>
             <br><br><br>
-            <h3>Paraná 600</h2> <br>
-            <h3>3515100200</h2> <br>
-            <h3>infoc@moyanopropiedades.com</h2>
+            <h6>Paraná 600</h6> <br>
+            <h6>3515100200</h6> <br>
+            <h6>infoc@moyanopropiedades.com</h6>
 
         </section>
         <section>
-            <h1>Sucursal Zona Sur</h1>
+            <h3>Sucursal Zona Sur</h3>
             <br><br><br>
-            <h3>Alumbrado 584</h2> <br>
-            <h3>3515222565</h2> <br>
-            <h3>infosur@moyanopropiedades.com</h2>
+            <h6>Alumbrado 584</h6> <br>
+            <h6>3515222565</h6> <br>
+            <h6>infosur@moyanopropiedades.com</h6>
         
 
         </section>
         
         <section>
-            <h1>Seguinos</h1>
+            <h3>Seguinos</h3>
             <br><br><br>
             <div class="usuario">
                 <img src="../assets/img/face.png" alt="logo de facebook">
-                <h3>@moyanopropiedades</h3>
+                <h6>@moyanopropiedades</h6>
             </div>
         </section>
 
