--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moyano Propiedades</title>
+    <meta name="keywords" content="inmobiliaria, casa, córdoba">
+    <meta name="description" content="Encontrá las mejores casas con los mejores precios...">
+    <meta name="author" content="Manuel Moyano">
+    <meta name="copyright" content=" Moyano Propiedades">
+
+    <meta property="og:title" content="Moyano Propiedades">
+    <meta property="og:description" content="Encontrá las mejores casas con los mejores precios">
+    <meta property="og:image" content="">
+    <meta property="og:article:author" content="">
+    <meta property="og:locale" content="">
+
+
+    <title>Moyano Propiedades | Inicio</title>
+    <link rel="shortcut icon" href="./assets/img/casa-icon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Kite+One&family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
    
 
@@ -18,7 +32,7 @@
         </div>
 
         <nav>
-            <ul class="list-unstyled">
+            <ul>
                 <li> <a href="#"> INICIO </a>  </li>
                 <li> <a href="./pages/inmuebles.html"> INMUEBLES </a>  </li>
                 <li> <a href="./pages/emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
@@ -108,29 +122,29 @@
 
     <footer>
         <section>
-            <h1>Sucursal Zona Centro</h1>
+            <h3>Sucursal Zona Centro</h3>
             <br><br><br>
-            <h3>Paraná 600</h2> <br>
-            <h3>3515100200</h2> <br>
-            <h3>infoc@moyanopropiedades.com</h2>
+            <h6>Paraná 600</h6> <br>
+            <h6>3515100200</h6> <br>
+            <h6>infoc@moyanopropiedades.com</h6>
 
         </section>
         <section>
-            <h1>Sucursal Zona Sur</h1>
+            <h3>Sucursal Zona Sur</h3>
             <br><br><br>
-            <h3>Alumbrado 584</h2> <br>
-            <h3>3515222565</h2> <br>
-            <h3>infosur@moyanopropiedades.com</h2>
+            <h6>Alumbrado 584</h6> <br>
+            <h6>3515222565</h6> <br>
+            <h6>infosur@moyanopropiedades.com</h6>
         
 
         </section>
         
         <section>
-            <h1>Seguinos</h1>
+            <h3>Seguinos</h3>
             <br><br><br>
             <div class="usuario">
                 <img src="./assets/img/face.png" alt="logo de facebook">
-                <h3>@moyanopropiedades</h3>
+                <h6>@moyanopropiedades</h6>
             </div>
         </section>
 
