--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moyano Propiedades</title>
+    <title>Moyano Propiedades | Contacto</title>
+    <meta name="keywords" content="inmobiliaria, casa, córdoba, contacto">
+    <meta name="description" content="Dejanos tu mensaje y en breve nos pondremos en contacto ...">
+    <meta name="author" content="Manuel Moyano">
+    <meta name="copyright" content=" Moyano Propiedades">
+
+    <link rel="shortcut icon" href="../assets/img/casa-icon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -64,29 +70,29 @@
 
     <footer>
         <section>
-            <h1>Sucursal Zona Centro</h1>
+            <h3>Sucursal Zona Centro</h3>
             <br><br><br>
-            <h3>Paraná 600</h2> <br>
-            <h3>3515100200</h2> <br>
-            <h3>infoc@moyanopropiedades.com</h2>
+            <h6>Paraná 600</h6> <br>
+            <h6>3515100200</h6> <br>
+            <h6>infoc@moyanopropiedades.com</h6>
 
         </section>
         <section>
-            <h1>Sucursal Zona Sur</h1>
+            <h3>Sucursal Zona Sur</h3>
             <br><br><br>
-            <h3>Alumbrado 584</h2> <br>
-            <h3>3515222565</h2> <br>
-            <h3>infosur@moyanopropiedades.com</h2>
+            <h6>Alumbrado 584</h6> <br>
+            <h6>3515222565</h6> <br>
+            <h6>infosur@moyanopropiedades.com</h6>
         
 
         </section>
         
         <section>
-            <h1>Seguinos</h1>
+            <h3>Seguinos</h3>
             <br><br><br>
             <div class="usuario">
                 <img src="../assets/img/face.png" alt="logo de facebook">
-                <h3>@moyanopropiedades</h3>
+                <h6>@moyanopropiedades</h6>
             </div>
         </section>
 
