--- a/pages/emprendimientos.html
+++ b/pages/emprendimientos.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moyano Propiedades</title>
+    <title>Moyano Propiedades | emprendimientos</title>
+    <meta name="keywords" content="inmobiliaria, casa, córdoba">
+    <meta name="description" content="En Moyano Propiedades tenemos para ofrecerte los mejores emprendimientos...">
+    <meta name="author" content="Manuel Moyano">
+    <meta name="copyright" content=" Moyano Propiedades">
+
+    <link rel="shortcut icon" href="../assets/img/casa-icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -35,7 +41,7 @@
 
         <section class="empConteiner">
             <article class="emp emp-1">
-                <div><img src="../assets/img/nobu-housing.jpg" alt="">
+                <div class="slide-top"><img src="../assets/img/nobu-housing.jpg" alt="Complejo de departamentos con pileta exterior en el medio">
                 </div>
                 <div>
                     <h2>NOBU HOUSING</h2>
@@ -46,8 +52,8 @@
 
 
             <article class="emp emp-2">
-                <div>
-                    <img src="../assets/img/complejo-2.jpg" alt="">
+                <div class="slide-top">
+                    <img src="../assets/img/complejo-2.jpg" alt=" Edificio de doce pisos, con patio exterior y pileta">
                 </div>
                 <div>
                     <h2>INTROVA ECO HOUSING</h2>
@@ -75,29 +81,29 @@
     <hr>
     <footer>
         <section>
-            <h1>Sucursal Zona Centro</h1>
+            <h3>Sucursal Zona Centro</h3>
             <br><br><br>
-            <h3>Paraná 600</h2> <br>
-            <h3>3515100200</h2> <br>
-            <h3>infoc@moyanopropiedades.com</h2>
+            <h6>Paraná 600</h6> <br>
+            <h6>3515100200</h6> <br>
+            <h6>infoc@moyanopropiedades.com</h6>
 
         </section>
         <section>
-            <h1>Sucursal Zona Sur</h1>
+            <h3>Sucursal Zona Sur</h3>
             <br><br><br>
-            <h3>Alumbrado 584</h2> <br>
-            <h3>3515222565</h2> <br>
-            <h3>infosur@moyanopropiedades.com</h2>
+            <h6>Alumbrado 584</h6> <br>
+            <h6>3515222565</h6> <br>
+            <h6>infosur@moyanopropiedades.com</h6>
         
 
         </section>
         
         <section>
-            <h1>Seguinos</h1>
+            <h3>Seguinos</h3>
             <br><br><br>
             <div class="usuario">
                 <img src="../assets/img/face.png" alt="logo de facebook">
-                <h3>@moyanopropiedades</h3>
+                <h6>@moyanopropiedades</h6>
             </div>
         </section>
 
