Eliminación de boostrap y agregado de animaciones

--- a/pages/emprendimientos.html
+++ b/pages/emprendimientos.html
@@ -45,7 +45,8 @@
                 </div>
                 <div>
                     <h2>NOBU HOUSING</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus reprehenderit minima eligendi, minus magnam porro eum laudantium pariatur hic facilis non repellendus. Quod laborum qui provident sint voluptas, temporibus debitis.</p>
+                    <p>PROYECTO DEPARTAMENTO Y CASAS. </p>
+                    <p>Desarrollado con un diseño exclusivo y moderno. Espacios verdes con plaza de juegos para niños. 40 casas y un edificio con 26 departamentos, 300 metros de locales comerciales y cocheras subterráneas. El complejo cuenta con sum con asadores, piscina, solárium y espacios verdes. Ingreso de jerarquía controlado, sistema CCTV y vigilancia las 24 hs.</p>
                 </div>
             </article>
 
@@ -57,7 +58,8 @@
                 </div>
                 <div>
                     <h2>INTROVA ECO HOUSING</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus reprehenderit minima eligendi, minus magnam porro eum laudantium pariatur hic facilis non repellendus. Quod laborum qui provident sint voluptas, temporibus debitis.</p>
+                    <p>Ubicado en la ZONA SUR de la Ciudad de Córdoba, con Ingreso por TEJAS 2; rápidos accesos a la Avenida Circunvalación. Un entorno apacible a minutos del Centro.</p>
+                    <p>El proyecto incluye casas de 141 m2 (117 cubiertos propios, más otros 24 m2 de pérgolas), con la mejor combinación entre construcción tradicional para la cascara y las ventajas de la construcción en seco para los interiores.</p>
                 </div>
             </article>
 
