creación de menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -18,29 +18,35 @@
     <title>Moyano Propiedades | Inicio</title>
     <link rel="shortcut icon" href="./assets/img/casa-icon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Kite+One&family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="./css/style.css">
    
 
-
 <body>
     <header>
-        <div class="imgLogo">
-            <img src="./assets/img/logo.jpg" alt="logo de inmobiliaria">
-            <h2 > Moyano Propiedades</h2>
-
-        </div>
 
         <nav>
-            <ul>
-                <li> <a href="#"> INICIO </a>  </li>
-                <li> <a href="./pages/inmuebles.html"> INMUEBLES </a>  </li>
-                <li> <a href="./pages/emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
-                <li> <a href="./pages/nosotros.html"> NOSOTROS </a>  </li>
-                <li> <a href="./pages/contactos.html"> CONTACTO </a> </li>
+            <div class="imgLogo">
+                <img src="./assets/img/logo.jpg" alt="logo de inmobiliaria">
+                <h2 > Moyano Propiedades</h2>
+    
+            </div>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
+                <ul>
+                    <li> <a href="#"> INICIO </a>  </li>
+                    <li> <a href="./pages/inmuebles.html"> INMUEBLES </a>  </li>
+                    <li> <a href="./pages/emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
+                    <li> <a href="./pages/nosotros.html"> NOSOTROS </a>  </li>
+                    <li> <a href="./pages/contactos.html"> CONTACTO </a> </li>
+    
+                </ul>
 
-            </ul>
+            </div>
 
-            </nav> 
+
+        </nav> 
         </section>
 
 
