--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,26 +9,35 @@
     <meta name="author" content="Manuel Moyano">
     <meta name="copyright" content=" Moyano Propiedades">
     <link rel="shortcut icon" href="../assets/img/casa-icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <div class="imgLogo">
-            <img src="../assets/img/logo.jpg" alt="logo de inmobiliaria">
-            <h2 > Moyano Propiedades</h2>
-        </div>
 
         <nav>
-            <ul>
-                <li> <a href="../index.html"> INICIO </a>  </li>
-                <li> <a href="./inmuebles.html"> INMUEBLES </a>  </li>
-                <li> <a href="./emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
-                <li> <a href="#"> NOSOTROS </a>  </li>
-                <li> <a href="./contactos.html"> CONTACTO </a> </li>
+            <div class="imgLogo">
+                <img src="../assets/img/logo.jpg" alt="logo de inmobiliaria">
+                <h2 > Moyano Propiedades</h2>
+    
+            </div>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
+                <ul>
+                    <li> <a href="../index.html"> INICIO </a>  </li>
+                    <li> <a href="./inmuebles.html"> INMUEBLES </a>  </li>
+                    <li> <a href="./emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
+                    <li> <a href="#"> NOSOTROS </a>  </li>
+                    <li> <a href="./contactos.html"> CONTACTO </a> </li>
+    
+                </ul>
 
-            </ul>
+            </div>
+
 
         </nav> 
+        </section>
 
 
     </header>
