--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -11,27 +11,36 @@
 
     <link rel="shortcut icon" href="../assets/img/casa-icon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <header>
-        <div class="imgLogo">
-            <img src="../assets/img/logo.jpg" alt="logo de inmobiliaria">
-            <h2 > Moyano Propiedades</h2>
-        </div>
 
         <nav>
-            <ul class="list-unstyled">
-                <li> <a href="../index.html"> INICIO </a>  </li>
-                <li> <a href="./inmuebles.html"> INMUEBLES </a>  </li>
-                <li> <a href="./emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
-                <li> <a href="./nosotros.html"> NOSOTROS </a>  </li>
-                <li> <a href="#"> CONTACTO </a> </li>
+            <div class="imgLogo">
+                <img src="../assets/img/logo.jpg" alt="logo de inmobiliaria">
+                <h2 > Moyano Propiedades</h2>
+    
+            </div>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
+                <ul>
+                    <li> <a href="../index.html"> INICIO </a>  </li>
+                    <li> <a href="./inmuebles.html"> INMUEBLES </a>  </li>
+                    <li> <a href="./emprendimientos.html"> EMPRENDIMIENTOS </a>  </li>
+                    <li> <a href="./nosotros.html"> NOSOTROS </a>  </li>
+                    <li> <a href="#"> CONTACTO </a> </li>
+    
+                </ul>
 
-            </ul>
+            </div>
+
 
         </nav> 
+        </section>
 
 
     </header>
