--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -68,7 +68,7 @@
                         <input type="text">
 
                     </fieldset>
-                    <button>Enviar</button>
+                    <button type="button" class="btn btn-outline-warning">Enviar</button>
                 </form>
             </article>
 
